@startuml slidecraft_db_schema
!theme plain
skinparam linetype ortho
skinparam backgroundColor #FEFEFE

' ------------------
' Documents Table
' ------------------
entity "documents" as documents {
  * document_id : VARCHAR
  --
  file_name : VARCHAR (NOT NULL)
  total_pages : INTEGER (NOT NULL)
  metadata : JSON
}

' ------------------
' Chunks Table
' Text embeddings via embeddings API, 384-dim
' ------------------
entity "chunks" as chunks {
  * chunk_id : VARCHAR
  --
  document_id : VARCHAR (FK, NOT NULL)
  page_number : INTEGER (NOT NULL)
  token_count : INTEGER (NOT NULL)
  content : TEXT
  summary : TEXT
  content_vector : VECTOR(384)
  summary_vector : VECTOR(384)
}

' ------------------
' Images Table
' Image description embeddings via embeddings API, 384-dim
' ------------------
entity "images" as images {
  * image_id : VARCHAR
  --
  document_id : VARCHAR (FK, NOT NULL)
  storage_path : VARCHAR (NOT NULL)
  page_number : INTEGER (NOT NULL)
  file_name : VARCHAR (NOT NULL)
  description : TEXT
  description_vector : VECTOR(384)
}

' ------------------
' Relationships
' ------------------
documents ||--o{ chunks : "1..*"
documents ||--o{ images : "1..*"

@enduml
